# sg-sdk

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  fw_builder.sh
examples/ex-prj-multi-comp/: CMakeLists.txt
examples/ex-prj-multi-comp/comp_a/: CMakeLists.txt  kconfig
examples/ex-prj-multi-comp/comp_a/inc/: comp_a.h
examples/ex-prj-multi-comp/comp_a/src/: comp_a.c
examples/ex-prj-multi-comp/comp_b/: CMakeLists.txt  kconfig
examples/ex-prj-multi-comp/comp_b/inc/: comp_b.h
examples/ex-prj-multi-comp/comp_b/src/: comp_b.c
examples/ex-prj-multi-comp/comp_main/: CMakeLists.txt  main.c
examples/ex-prj-multi-comp/comp_mpy/: CMakeLists.txt  manifest.py  module_x.py
examples/ex-prj-single-comp/: CMakeLists.txt
examples/ex-prj-single-comp/cfg/: kconfig  kconfig.default
examples/ex-prj-single-comp/inc/: head_1.h  head_2.h
examples/ex-prj-single-comp/mpy/: ex_frozen_module.py  manifest.py
examples/ex-prj-single-comp/patches/: update_patches.sh
examples/ex-prj-single-comp/patches/utils_lib/: utils_time.c.patch
examples/ex-prj-single-comp/src/: file_a.c  file_b.c  main.c  mpy_ex_c_module.c  mpy_unused_app_main.c
examples/hello_world/: CMakeLists.txt  main.c
examples/lora-chat/: CMakeLists.txt  main.c
examples/lora-file-transfer/: CMakeLists.txt  file_transfer_demo.py  manifest.py
examples/rgbled/: CMakeLists.txt  main.c
src/comps/: README.md
src/comps/ctrl-client/: CMakeLists.txt  ctrl_client_start.py  manifest.py
src/comps/ctrl-client/cfg/: ctrl_client.config
src/comps/ctrl-client/docs/: user-api.md
src/comps/ctrl-client/src/: CayenneLpp.c  CayenneLpp.h  ctrl_config.c  ctrl_config.h  mod_cayennelpp.c  mod_ctrl_cfg.c  nvs_config.c  nvs_config.h
src/comps/fw-version/: CMakeLists.txt  README.md  build_version_gen.cmake  fw_version.c  fw_version.h  fw_version.py  mod_fw_version.c
src/comps/lora/: CMakeLists.txt
src/comps/lora/cfg/: lora.config
src/comps/lora/docs/: lora-callback.md  lora-lctt.md  lora-main.md  lora-raw.md  lora-wan.md
src/comps/lora/inc/: logs_defs.h  lora.h  lora_port.h
src/comps/lora/mpy/: mod_lora.c  mpy_lora_cb_if.c  mpy_lora_cb_if.h
src/comps/lora/src/lm/: CMakeLists.txt  update_lm_patches.sh
src/comps/lora/src/lm/patches/: LoRaMac.c.patch  LoRaMacClassB.c.patch  RegionUS915.c.patch  radio.c.patch
src/drivers/: README.md
src/drivers/common/: CMakeLists.txt  logs_defs.h
src/drivers/pcal6408a/: CMakeLists.txt  pcal6408a.c  pcal6408a.config  pcal6408a.h
src/libs/adt/: CMakeLists.txt
src/libs/adt/cfg/: buffers_chain.config  buffers_chain_demo.config  idll.config  idll_demo.config
src/libs/adt/inc/: adt_list.h  buffers_chain.h  idll.h
src/libs/adt/src/: adt_list.c  buffers_chain.c  idll.c
src/libs/adt/tst/: buffers_chain_demo.c  idll_demo_test.c
src/libs/logs/: CMakeLists.txt  log_enforce.h  log_enforce.mk
src/libs/logs/cfg/: kconfig
src/libs/logs/inc/: log_config.h  log_config_sanity.h  log_enforce.h  log_lib.h  log_mem_dump.h  log_test.h  log_utils.h
src/libs/logs/mpy/: mod_logs.c
src/libs/logs/src/: log_buf_mgr.c  log_buf_mgr.h  log_colors_defs.h  log_main.c  log_obj.h  log_provide_enforce.c  log_provider.c  log_provider.h  log_provider_mem_dump.c  log_provider_test.c  log_utils.c
src/libs/logs/tst/: logs_hosttest.mk  test.c
src/libs/mpy-al/: CMakeLists.txt
src/libs/mpy-al/cfg/: demo.kconfig
src/libs/mpy-al/inc/: mp_lite_if.h
src/libs/mpy-al/mpy/: mpy_cmod_ex.c
src/libs/mpy-al/src/: mp_utils.c
src/libs/state-machine/: CMakeLists.txt
src/libs/state-machine/cfg/: demo.config
src/libs/state-machine/inc/: state_machine.h
src/libs/state-machine/src/: state_machine.c
src/libs/state-machine/tst/: demo_sm_state_machine.c  demo_sm_state_machine.h  state_machine_demo.c
src/libs/utils/: CMakeLists.txt  logs_defs.h  utils_bitarray.c  utils_bitarray.h  utils_bitwise.h  utils_fs_path.c  utils_fs_path.h  utils_math.h  utils_misc.h  utils_time.c  utils_time.h  utils_units.h
src/libs/utils/tst/: Makefile  unittest_main.c
tests/lora/: run_test_suite.sh  test_suite_manifest.json
tests/lora/raw/radio-params/: false-parameters-detection.py  false-parameters-detection.py.exp  regions-channel-frequencies.py  regions-channel-frequencies.py.exp  regions-default-parameters.py  regions-default-parameters.py.exp
tests/micropython/: run_test_suite.sh  test_suite_manifest.json
tests/micropython/test-cases/: machine-timer.py  machine-virtual-timers.py  machine-virtual-timers.py.exp
tests/safeboot/: run_test_suite.sh  test_suite_manifest.json
tests/safeboot/test-cases/: safeboot-in-help-display.py.exp  safeboot-soft-ctrl-f.exp  safeboot-soft-ctrl-f.json
tools/builder/cmake/: entity.cmake  env.cmake  esp-idf.cmake  log.cmake  menu_config.cmake  micropython.cmake  sdk.cmake  update_patches.sh  utils.cmake
tools/builder/docs/: builder.md  config-mgr.md  fw_app_prj.md
tools/builder/scripts/: builder.py  fw-builder-template.sh
tools/pylibs/: pycli.py  pylog.py  pytext.py
tools/tester/: tester.py
tools/tester/docs/: readme.md
tools/tester/examples/example-3-job-tc/: run-example.sh
(+150 files in other folders)
